about.html/index.html files

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
         <div class="bottom">
           <div class="container">
-            <a href="index.html" class="nav-logo">ILC 2023</a>
+            <a href="index.html" class="nav-logo">KLWC 2023</a>
             <ul class="nav-menu">
               <li class="nav-item">
                 <a href="index.html" class="nav-link">Home</a>
@@ -82,20 +82,16 @@
 
     <main>
       <section class="main-page about-page container">
-        <p class="greet about-hide">"Lead the world through innovations."</p>
-        <h1 class="about-header">Connecting Minds, Empowering Change 2023</h1>
+        <p class="greet about-hide">"Life-transforming events."</p>
+        <h1 class="about-header">brings together, <br />
+          thousands of worshippers 2023</h1>
         <hr />
         <p class="description about-description">
-          "Welcome to the Innovation and Leadership Conference, a premier event
-          dedicated to fostering creativity, driving innovation, and promoting
-          effective leadership in today's dynamic and fast-paced business
-          environment."
+          "KLWC Free skill acquisation training.3 weeks free skills aquisation classes. Get empower!
+          seize the momment and get trained by renenowned facilitators for free!
+          
         </p>
-        <p class="about-location">
-          Please contact us via email for any further question and
-          clarifications about the ILC Summit 2023
-        </p>
-        <a class="email" href="#">info@ilcsummit2023.org</a>
+        <a class="email" href="#">info@KLWK skills 2023.org</a>
       </section>
     </main>
     <!-- MAIN ENDS -->
@@ -103,35 +99,35 @@
     <!-- SUB-SECTION STARTS -->
     <section class="sub-section">
       <div class="container">
-        <h2>ILC Summit 2023 Logo</h2>
+        <h2>KLWC free skills 2023 Logo</h2>
         <hr />
         <p>
-          The Logo of the ILC summit 2023 will be decided through the annual ILC
-          logo competition on May 8, 2023.
+          The Logo of the KLWC skills 2023 will be decided through the annual KLWC
+          logo competition on Nov. 8, 2023.
         </p>
         <h4 class="ilc">
-          ILC GLOBAL <br />
-          SUMMIT 2023.
+          KLWC INTERNATIONAL SKILLS <br />
+           2023.
         </h4>
       </div>
       <hr class="line" />
       <div class="container">
-        <h2>See the past ILC Summits</h2>
+        <h2>See the past KLWC skills</h2>
         <hr />
         <p>
-          Take a look at the last two ILC Summits which took place in Cape Coast
+          Take a look at the last two KLWC skills which took place in Cape Coast
           and Accra.
         </p>
 
         <div id="summit">
           <div class="summit-1">
-            <h3 class="summit-header">2021</h3>
-            <p class="summit">ILC Summit 2021 in Cape Coast</p>
+            <h3 class="summit-header">2018</h3>
+            <p class="summit">KLWC skills spintex road, Accra</p>
           </div>
 
           <div class="summit-2">
-            <h3 class="summit-header">2019</h3>
-            <p class="summit">ILC Summit 2019 Accra.</p>
+            <h3 class="summit-header">2022</h3>
+            <p class="summit">KLWC skills Summit 2022 Lagos.</p>
           </div>
         </div>
       </div>
@@ -159,9 +155,9 @@
 
     <footer id="footer-about">
       <div class="footer-content container">
-        <h5>Innovation and Leadership Conference, ILC</h5>
+        <h5>Life-transforming event KLWC</h5>
         <p class="footer-text">
-          2023 Innovation and Leadership Conference <br />
+          2023 skills acquisation and Leadership Conference <br />
           All Rights Reserved.
         </p>
       </div>
