modified:   about.html         modified:   index.html         modified:   style.css files

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <title>About</title>
   </head>
   <body>
-    <!-- HEADER STARTS -->
+    <!-- header starts-->
     <header class="header">
       <nav class="navbar">
         <div class="top">
@@ -76,9 +76,9 @@
         </div>
       </nav>
     </header>
-    <!-- HEADER ENDS -->
+    <!-- header ends -->
 
-    <!-- MAIN STARTS -->
+    <!-- main starts -->
 
     <main>
       <section class="main-page about-page container">
@@ -94,9 +94,9 @@
         <a class="email" href="#">info@KLWK skills 2023.org</a>
       </section>
     </main>
-    <!-- MAIN ENDS -->
+    <!-- main ends -->
 
-    <!-- SUB-SECTION STARTS -->
+    <!-- sub-section -->
     <section class="sub-section">
       <div class="container">
         <h2>KLWC free skills 2023 Logo</h2>
@@ -132,9 +132,9 @@
         </div>
       </div>
     </section>
-    <!-- SUB-SECTION ENDS -->
+    <!-- sub section ends -->
 
-    <!-- PARTNER STARTS -->
+    <!-- partners-starts -->
     <section class="partner">
       <div class="container">
         <h4>Partners</h4>
@@ -149,9 +149,9 @@
         </div>
       </div>
     </section>
-    <!-- PARTNER ENDS -->
+    <!-- partners-ends -->
 
-    <!-- FOOTER STARTS -->
+    <!-- footer starts -->
 
     <footer id="footer-about">
       <div class="footer-content container">
@@ -163,7 +163,7 @@
       </div>
     </footer>
 
-    <!-- FOOTER STARTS -->
+    <!-- footer end -->
 
     <script src="script.js"></script>
   </body>
