--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Kingdom Life World Conference</title>
   </head>
   <body>
-    <!-- HEADER STARTS -->
+    <!-- header starts -->
     <header class="header">
       <nav class="navbar">
         <div class="top">
@@ -76,9 +76,9 @@
         </div>
       </nav>
     </header>
-    <!-- HEADER ENDS -->
+    <!-- header-ends -->
 
-    <!-- MAIN STARTS -->
+    <!-- main-starts -->
 
     <main>
       <section class="main-page container">
@@ -96,9 +96,9 @@
         </p>
       </section>
     </main>
-    <!-- MAIN ENDS -->
+    <!-- Main-ends -->
 
-    <!-- PROGRAMS STARTS -->
+    <!-- program-starts -->
     <section class="program">
       <div class="container">
         <h2>Main Program</h2>
@@ -161,9 +161,9 @@
         <p class="show">SEE THE WHOLE PROGRAM</p>
       </div>
     </section>
-    <!-- PROGRAMS ENDS -->
+    <!-- programs-ends -->
 
-    <!-- SPEAKERS STARTS -->
+    <!-- speakers-starts -->
     <section class="speakers">
       <div class="container">
         <h2>Featured Speakers</h2>
@@ -172,9 +172,9 @@
         <div class="featured-speakers"></div>
       </div>
     </section>
-    <!-- SPEAKERS ENDS -->
+    <!--Speakers-ends -->
 
-    <!-- PARTNER STARTS -->
+    <!-- partners-starts -->
     <section class="partner sponsor" id="sponsor">
       <div class="container">
         <h4>Partners</h4>
@@ -183,15 +183,15 @@
           <p class="sponsor1">Dangote</p>
           <img src="./images/sponsor-2.png" alt="" />
           <img src="./images/sponsor-3.png" alt="" />
-          <img src="images/sponsor-4.png" alt="" />
+          <img src="./images/sponsor-4.png" alt="" />
           <img src="./images/sponsor-5.png" alt="" />
           <img src="./images/sponsor-6.png" alt="" />
         </div>
       </div>
     </section>
-    <!-- PARTNER ENDS -->
+    <!-- partners-ends -->
 
-    <!-- FOOTER STARTS -->
+    <!-- footers-starts -->
 
     <footer id="footer-home">
       <div class="footer-content container">
@@ -203,7 +203,7 @@
       </div>
     </footer>
 
-    <!-- FOOTER STARTS -->
+    <!-- footer ends -->
 
     <script src="script.js"></script>
   </body>
