--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
           seize the momment and get trained by renenowned facilitators for free!
           
         </p>
-        <a class="email" href="#">info@KLWK skills 2023.org</a>
+        <a class="email" href="#">info@klwc_skills 2023.org</a>
       </section>
     </main>
     <!-- main ends -->
@@ -140,7 +140,7 @@
         <h4>Partners</h4>
         <hr />
         <div class="logos">
-          <p class="sponsor1">daumkakao</p>
+          <p class="sponsor1">Dangote</p>
           <img src="images/sponsor-2.png" alt="" />
           <img src="images/sponsor-3.png" alt="" />
           <img src="images/sponsor-4.png" alt="" />
