--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <img src="./images/sponsor-3.png" alt="" />
           <img src="./images/sponsor-4.png" alt="" />
           <img src="./images/sponsor-5.png" alt="" />
-          <img src="./images/sponsor-6.png" alt="" />
+          <img src="./images/gtv.png" alt="" />
         </div>
       </div>
     </section>
@@ -197,7 +197,7 @@
       <div class="footer-content container">
         <h5>Kingdom Life World Conference 2022, KLWC</h5>
         <p class="footer-text">
-          2023 Innovation and Leadership Conference <br />
+          2023 skills acquisation and Leadership Conference <br />
           All Rights Reserved.
         </p>
       </div>
