modified index.html file

--- a/about.html
+++ b/about.html
@@ -83,8 +83,8 @@
     <main>
       <section class="main-page about-page container">
         <p class="greet about-hide">"Life-transforming events."</p>
-        <h1 class="about-header">brings together, <br />
-          thousands of worshippers 2023</h1>
+        <h1 class="about-header">brings together,<br/>
+          worshippers 2023</h1>
         <hr />
         <p class="description about-description">
           "KLWC Free skill acquisation training.3 weeks free skills aquisation classes. Get empower!
