--- a/about.html
+++ b/about.html
@@ -43,13 +43,10 @@
 
         <div class="bottom">
           <div class="container">
-            <a href="index.html" class="nav-logo">KLWC 2023</a>
+            <a href="index.html" class="nav-logo">KLWC</a>
             <ul class="nav-menu">
               <li class="nav-item">
                 <a href="index.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="about.html" class="nav-link">About</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">Program</a>
