--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="container">
             <a href="index.html" class="nav-logo">KLWC</a>
             <ul class="nav-menu">
-             </li>
-              <li class="nav-item">
+               </li>
+               <li class="nav-item">
                 <a href="about.html" class="nav-link">About</a>
               </li>
               <li class="nav-item">
@@ -56,7 +56,7 @@
                 <a href="#" class="nav-link">Join</a>
               </li>
               <li class="nav-item">
-                <a href="#sponsor" class="nav-link">Partners</a>
+                <a href="#sponsor" class="nav-link">sponsors</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">News</a>
