--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
         <hr />
         <div class="logos logo-home">
           <p class="sponsor1">Dangote</p>
-          <img src="./images/sponsor-2.png" alt="" />
-          <img src="./images/sponsor-3.png" alt="" />
-          <img src="./images/sponsor-4.png" alt="" />
-          <img src="./images/sponsor-5.png" alt="" />
-          <img src="./images/gtv.png" alt="" />
+          <img src="./images/sponsor-2.png" alt="airbnb logo" />
+          <img src="./images/sponsor-3.png" alt="mtn logo" />
+          <img src="./images/sponsor-4.png" alt="joyfm logo" />
+          <img src="./images/sponsor-5.png" alt="tv3 logo" />
+          <img src="./images/gtv.png" alt="gtv logo" />
         </div>
       </div>
     </section>
